# Encore

./: .example.env  .gitignore  Cargo.toml  Dockerfile  application.example.yml  docker-compose.yml  readme.md
bot/: Cargo.toml
bot/src/: checker.rs  errors_handler.rs  main.rs
bot/src/commands/: errors.rs  mod.rs  music.rs
bot/src/events/: mod.rs  music.rs
bot/src/utils/: ctx.rs  dates.rs  embeds.rs  errors.rs  mod.rs  prelude.rs
lavalink-rs/: Cargo.toml
lavalink-rs/src/: client.rs  lib.rs
lavalink-rs/src/player_context/: context.rs
