[package]
name = "bot"
version = "0.1.1"
edition = "2021"

[dependencies]
dotenvy = '0.15.7'
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
futures = "0.3"
humantime = "2.1.0"
anyhow = "1.0.86"
extend = "1.2"
chrono = "0.4.38"
thiserror = "1.0.62"

[dependencies.poise]
version = "0.6"
default-features = false
features = ["cache", "chrono", "handle_panics"]

[dependencies.songbird]
version = "0.4.3"
default-features = false
features = ["gateway", "serenity", "native"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.lavalink-rs]
path = "../lavalink-rs"
default-features = false
features = ["songbird", "serenity", "native-tls", "macros"]
